objects/Email_2_Lead_Routing_Email__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Response_Email_OWA_Id__c</fullName>
        <label>Auto Response Email OWA Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Response_Email__c</fullName>
        <defaultValue>&quot;CH-ABB-noreply@abb.com&quot;</defaultValue>
        <description>ch-abb-noreply@abb.com</description>
        <label>Auto Response Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Backup__c</fullName>
        <description>Backup field to save existing value from Business_Unit__c field. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value from Business_Unit__c field.</inlineHelpText>
        <label>Business Unit Backup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>EPCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IACO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IATU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MODR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGHV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGTR</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Email 2 Lead Routing Emails</relationshipLabel>
        <relationshipName>Email_2_Lead_Routing_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Template_ID__c</fullName>
        <label>Email Template ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <description>Auto_Response_contact_center_it_abb_com</description>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Wide_Email_Id__c</fullName>
        <label>Organization Wide Email Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Country__c</fullName>
        <description>Italy</description>
        <label>Originating Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State Of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius And Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Product Group dictionary object</description>
        <inlineHelpText>Select the Product Group relevant for the BU</inlineHelpText>
        <label>ProductGroup</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Business Unit In Product and Email2LeadRoutingEmail doesn&apos;t match</errorMessage>
            <filterItems>
                <field>$Source.Business_Unit__c</field>
                <operation>contains</operation>
                <valueField>Product_Group__c.Business_Unit__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Email 2 Lead Routing Emails</relationshipLabel>
        <relationshipName>Email_2_Lead_Routing_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <label>Queue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <description>IT_Contact_Center_2016</description>
        <label>Queue Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Id__c</fullName>
        <label>Record Type Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Contact_Center</description>
        <label>Record Type Name</label>
        <picklist>
            <picklistValues>
                <fullName>Contact_Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales_Marketing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Routing_Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>contact.center@it.abb.com</description>
        <label>Routing Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <label>Email 2 Lead Routing Email</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Record_Type_Name__c</columns>
        <columns>NAME</columns>
        <columns>Routing_Email__c</columns>
        <columns>Email_Template_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Business_Unit__c</columns>
        <columns>Division__c</columns>
        <columns>ProductGroup__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>E2LRE{000000}</displayFormat>
        <label>Email 2 Lead Routing Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email 2 Lead Routing Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Required_Proper_Queue</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Queue_Id__c)</errorConditionFormula>
        <errorDisplayField>Queue_Name__c</errorDisplayField>
        <errorMessage>Queue does not exist. Please ensure that You wrote a queue&apos;s developer name for example RU_PG_HV_Service not a queue&apos;s label like RU-PG-HV.Service</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Record_Type_Name</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Record_Type_Name__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Record_Type_Name__c</errorDisplayField>
        <errorMessage>Record type has to be set</errorMessage>
    </validationRules>
</CustomObject>